--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "reactboilerplate",
+  "name": "bookstore",
   "version": "0.1.0",
-  "homepage": "https://jihaneH.github.io/ReactBoilerplate",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
